Add experimental annotations for Protobuf messaging
- Introduced `@ProtobufIncoming`, `@ProtobufOutgoing`, and `@ProtobufChannel` annotations for streamlined Protobuf-based messaging.
- Enabled build-time transformation of custom annotations into standard MicroProfile Reactive Messaging annotations.
- Enhanced auto-detection of Protobuf message types in Kafka channels.
- Updated integration tests and documentation to reflect new annotation support.